--- a/bugBounty.html
+++ b/bugBounty.html
@@ -51,7 +51,7 @@
         <div class="col-md-6 blog-main text-justify">
           <h2 class="header-badge">Yahoo Bug Bounty Special Program 2.0</h2>
           <p>Hello Security Researchers!</p>
-          <p>We are pleased to release <a href="https://www.npmjs.com/package/xss-filters">XSS Filters</a> and <a href="https://www.npmjs.com/package/secure-handlebars">Secure Handlebars</a> to the public. We now accept vulnerabilty reports for these two products under our bug bounty program with <strong>DOUBLE</strong> reward.</p>
+          <p>We are pleased to release <a href="https://www.npmjs.com/package/xss-filters">XSS Filters</a> and <a href="https://www.npmjs.com/package/secure-handlebars">Secure Handlebars</a> to the public. We now accept vulnerabilty reports for these two products under our bug bounty program with <strong>DOUBLE</strong> reward for a limited time.</p>
           <p>Please click the link below for more details. We look forward to working with you!</p>
           <div class="security-cta">
             <form action="./bugBountyRules.html" method="get"> 
