--- a/demosSecureHandlebars.html
+++ b/demosSecureHandlebars.html
@@ -82,13 +82,12 @@
         </div>
 
         <script src="javascripts/secure-handlebars.min.js"></script>
-        <script src="javascripts/secure-handlebars-helpers.min.js"></script>
         <script src="javascripts/demos_context_parser_handlebars.js"></script>
 
         <div class="col-md-12 blog-post">
           <ol class="list-unstyled">
            <li><img src="https://img.shields.io/npm/v/secure-handlebars.svg?style=flat-square"/> <a href="https://www.npmjs.com/package/secure-handlebars">Secure Handlebars</a></li>
-           <li><img src="https://img.shields.io/npm/v/secure-handlebars-helpers.svg?style=flat-square"/> <a href="https://www.npmjs.com/package/secure-handlebars-helpers">Secure Handlebars Helpers</a></li>
+           <!--li><img src="https://img.shields.io/npm/v/secure-handlebars-helpers.svg?style=flat-square"/> <a href="https://www.npmjs.com/package/secure-handlebars-helpers">Secure Handlebars Helpers</a></li-->
            <li><img src="https://img.shields.io/npm/v/express-secure-handlebars.svg?style=flat-square"/> <a href="https://www.npmjs.com/package/express-secure-handlebars">Express Secure Handlebars</a></li>
           </ol>
         </div><!-- blog-post -->
