--- a/demosXssFilters.html
+++ b/demosXssFilters.html
@@ -66,7 +66,7 @@
         <div class="col-md-12 blog-post" id="output">
         </div><!-- blog-post -->
            
-        <script src="javascripts/xss-filters.min.js"></script>
+        <script src="xss-filters.min.js"></script>
         <script src="javascripts/demos_xss_filters.js"></script>
 
         <div class="col-md-12 blog-post">
